changed hero img to .jpg to see if it would fix it not showing up on github pages

--- a/CSS/about-us.css
+++ b/CSS/about-us.css
@@ -1,5 +1,5 @@
-.about-us {
-    height: 100%;
+#about-us {
+    height: 740px;
     width: 100%;
     background-color: white;
 }
